<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/favourite_action"/>
    <item
        android:id="@+id/action_schedules"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_search" />
    <item
        android:id="@+id/action_music"
        android:enabled="true"
        android:icon="@drawable/ic_flight_takeoff_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/augumented_reality" />
</menu>