<?xml version="1.0" encoding="utf-8"?><!-- Based on https://antonioleiva.com/collapsing-toolbar-layout/


  ~ Copyright (C) 2015 Antonio Leiva
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/primary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/business_image"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/business_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="@color/white" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFAFAFA">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="16dp"

                        android:paddingTop="24dp">


                        <TextView
                            android:id="@+id/title_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxWidth="250dp"
                            android:textSize="24sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/place_details_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:contentDescription="@string/place_icon"
                                android:src="@drawable/ic_place_black_24dp"

                                />

                            <TextView
                                android:id="@+id/distance_details"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingEnd="16dp"
                                android:paddingStart="8dp"
                                android:textSize="14sp" />

                        </LinearLayout>


                    </RelativeLayout>


                    <RatingBar
                        android:id="@+id/rating_bar_details"
                        style="@style/RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/top"
                        android:numStars="5"
                        android:stepSize="0.5" />

                    <TextView
                        android:id="@+id/rating_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/top"
                        android:layout_marginEnd="8dp"
                        android:layout_toEndOf="@id/rating_bar_details"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/review_count_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/top"
                        android:layout_toEndOf="@id/rating_details"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/street_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_bar_details"

                        android:paddingTop="16dp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/zipcode_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/street_details"
                        android:textSize="14sp" />

                    <View
                        android:id="@+id/separator1"
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_below="@id/zipcode_details"
                        android:layout_marginTop="16dp"
                        android:background="#90909090" />

                    <RelativeLayout
                        android:id="@+id/actions_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/separator1"
                        android:layout_marginTop="16dp"

                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/call_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/call_action"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="@null"
                                android:padding="8dp"
                                android:src="@drawable/ic_call_black_24dp" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:text="@string/call_string" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/website_action"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="@null"
                                android:padding="8dp"
                                android:src="@drawable/ic_language_black_24dp" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:text="@string/website_string" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/favourite_action"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="@null"
                                android:padding="8dp"
                                android:src="@drawable/ic_favorite_border_black_24dp" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:text="@string/favourite_string" />


                        </LinearLayout>
                    </RelativeLayout>

                    <View
                        android:id="@+id/separator2"
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_below="@id/actions_details"
                        android:layout_marginTop="16dp"
                        android:background="#90909090" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/separator2"
                        android:orientation="vertical">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/horizontal_recycler_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="15dp"
                            android:horizontalSpacing="10dp"
                            android:isScrollContainer="false"
                            android:stretchMode="columnWidth"
                            android:verticalSpacing="10dp" />
                    </LinearLayout>


                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>